<resources>
    <string name="app_name">TeamWork Tasks</string>

    <!-- Pré login -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pre_login_usuario_label">Usuário</string>
    <string name="pre_login_senha_label">Senha</string>
    <string name="pre_login_entrar_label">Entrar</string>
    <string name="pre_login_biometria_titulo">@string/app_name</string>
    <string name="pre_login_biometria_subtitulo">Autenticação necessária para continuar</string>
    <string name="pre_login_biometria_descricao">A aplicação usa biomentria para proteger seus dados.</string>
    <string name="pre_login_sair_title">Sair!</string>
    <string name="pre_login_sair_descricao">Deseja encerrar a aplicação?</string>

    <!-- Cadastro usuario -->
    <string name="usuario_cadastro_titulo">Cadastrar Usuário</string>
    <string name="usuario_cadastro_nome_label">Nome Exibição</string>
    <string name="usuario_cadastro_login_label">Login</string>
    <string name="usuario_cadastro_senha_label">Senha</string>
    <string name="usuario_cadastro_repetir_senha_label">Repetir Senha</string>
    <string name="usuario_cadastro_sucesso">Usuário cadastrado com sucesso!</string>

    <!-- Genericos -->
    <string name="generico_vazio_erro">Informar %1$s!</string>
    <string name="generico_salvar_label">Salvar</string>
    <string name="generico_cancelar_label">Cancelar</string>
    <string name="generico_confirmar">Sim</string>
    <string name="generico_negar">Não</string>
    <string name="generico_erro_servico">Ocorreu um erro ao realizar a requisição, por favor tente mais tarde!</string>

    <!-- Bottom Navegator -->
    <string name="bottom_navegator_home">Home</string>
    <string name="bottom_navegator_tarefa">Tarefas</string>
    <string name="bottom_navegator_tags">Tags</string>
    <string name="bottom_navegator_equipe">Equipe</string>
    <string name="bottom_navegator_notificacoes">Notificações</string>

    <!-- Dashboard (Seletor Projeto)-->
    <string name="dashboard_title">Bem vindo, %1$s!</string>
    <string name="dashboard_fab_novo_projeto">Novo Projeto</string>
    <string name="dashboard_fab_editar_projeto">Editar Projeto</string>
    <string name="dashboard_fab_participar_projeto">Juntar-se a um Projeto</string>
    <string name="dashboard_logout_title">Logout</string>
    <string name="dashboard_logout_descricao">Deseja fazer Logout?</string>
    <string name="dashboard_lista_title">Histórico</string>
    <string name="dashboard_lista_vazia">O Projeto não possui historico</string>
    <string name="dashboard_historico_informacao">O Usuário %1$s %2$s</string>
    <string name="dashboard_sem_projeto_vazia">Você ainda não possui projetos. Para adicionar/Juntar-se um novo projeto clicar no botão + e selecionar Nova Projeto ou Juntar-se a um Projeto</string>

    <!-- Cadastro Projeto -->
    <string name="projeto_cadastro_titulo">Cadastrar Projeto</string>
    <string name="projeto_cadastro_nome_label">Nome Projeto</string>
    <string name="projeto_cadastro_descricao_label">Descrição</string>
    <string name="projeto_cadastro_criado_em_label">Criado em : </string>
    <string name="projeto_cadastro_criado_por_label">Criado por : </string>
    <string name="projeto_cadastro_codigo_label">Código acesso : </string>
    <string name="projeto_cadastro_sucesso">Projeto cadastrado com sucesso!</string>
    <string name="projeto_editar_sucesso">Projeto editado com sucesso!</string>

    <!-- Projeto Cards -->
    <string name="projeto_card_nome_label">Nome Projeto : </string>
    <string name="projeto_card_descricao_label">Descrição : </string>
    <string name="projeto_card_criado_em_label">Criado em : </string>
    <string name="projeto_card_seletor_titulo_label">Selecione um Projeto</string>
    <string name="projeto_card_seletor_meus_projetos_label">Meus Projetos</string>
    <string name="projeto_card_seletor_projetos_participo_label">Projetos que Participo</string>

    <!-- Projeto associar -->
    <string name="projeto_associar_titulo_label">Junte-se a um projeto</string>
    <string name="projeto_associar_codigo_projeto_label">Código do projeto</string>
    <string name="projeto_associar_botao_pesquisar_label">Pesquisar</string>
    <string name="projeto_associar_botao_juntar_label">Juntar-se</string>
    <string name="projeto_associar_ja_associado_warning">Você já participa desse projeto!</string>
    <string name="projeto_associar_projeto_invalido_warning">Projeto não encontrado!</string>
    <string name="projeto_associar_sucesso">Você foi associado ao projeto com sucesso!</string>

    <!-- Tarefas -->
    <string name="tarefas_title">@string/bottom_navegator_tarefa</string>
    <string name="tarefas_novo_titulo">Nova Tarefa</string>
    <string name="tarefas_tab_aberta">Aberta</string>
    <string name="tarefas_tab_desenvolvimento">Desenvolvimento</string>
    <string name="tarefas_tab_validacao">Validação</string>
    <string name="tarefas_tab_concluida">Concluída</string>
    <string name="tarefas_card_nome_label">Nome Projeto : </string>
    <string name="tarefas_card_descricao_label">Descrição : </string>
    <string name="tarefas_card_prioridade_label">Prioridade : </string>
    <string name="tarefas_card_data_label">Data Entrega : </string>
    <string name="tarefas_card_pop_editar_label">Editar</string>
    <string name="tarefas_card_pop_agendar_label">Agendar</string>
    <string name="tarefas_card_pop_deletar_label">Deletar</string>
    <string name="tarefas_agenda_titulo">Entrega tarefa : %1$s</string>


    <!-- Tarefas Cadastro -->
    <string name="tarefa_cadastro_titulo">Cadastrar Tarefa</string>
    <string name="tarefa_cadastro_nome_label">Nome Tarefa</string>
    <string name="tarefa_cadastro_descricao_label">Descrição</string>
    <string name="tarefa_cadastro_data_entrega_label">Data Entrega</string>
    <string name="tarefa_cadastro_prioridade_label">Prioridade</string>
    <string name="tarefa_cadastro_status_label">Status</string>
    <string name="tarefa_cadastro_tag_label">Tag</string>
    <string name="tarefa_cadastro_responsavel_label">Responsavel</string>
    <string name="tarefa_cadastro_sucesso">Tarefa cadastrada com sucesso!</string>
    <string name="tarefa_editar_sucesso">Tarefa editada com sucesso!</string>

    <!-- Tags -->
    <string name="tags_title">@string/bottom_navegator_tags</string>
    <string name="tags_lista_title">Tags do Projeto</string>
    <string name="tags_novo_titulo">Nova Tag</string>
    <string name="tags_nome_label">Nome</string>
    <string name="tags_cor_label">Cor</string>
    <string name="tags_lista_vazia">O Projeto não possui ainda Tags. Para adicionar clicar no botão "+" e selecionar Nova Tag</string>
    <string name="tag_criar_titulo">Criar Nova Tag</string>
    <string name="tag_editar_titulo">Editar uma Tag</string>
    <string name="tag_salvar_sucesso">Tag cadastrado com sucesso!</string>
    <string name="tag_editar_sucesso">Tag editada com sucesso!</string>

    <!-- Equipe -->
    <string name="equipe_title">@string/bottom_navegator_equipe</string>
    <string name="equipe_lista_participantes_title">Participantes do Projeto</string>
    <string name="equipe_lista_nome_criador">%1$s (Criador)</string>

    <string name="equipe_remover_usuario_title">Remover Usuário</string>
    <string name="equipe_remover_usuario_descricao">Deseja realmente remover o usuário %1$s do projeto?</string>
    <string name="equipe_remover_usuario_sucesso">Usuário removido com sucesso!</string>

    <string name="equipe_fab_compartilhar">Compartilhar Codigo Projeto</string>
    <string name="equipe_fab_enviar_email">Convidar por E-mail</string>

    <string name="equipe_enviar_compartilhar_titulo_atalho">Send to</string>
    <string name="equipe_enviar_email_titulo_atalho">Send email...</string>
    <string name="equipe_enviar_email_titulo">TeamWork Tasks - Convite para o Projeto %1$s</string>
    <string name="equipe_enviar_email_doby">Olá,\n\nPara entrar no projeto %1$s via aplicação TeamWork Tasks utilize o código: %2$s \n\n Ou acesse o link a baixo para escanear o Qr Code \n\n https://api.qrserver.com/v1/create-qr-code/?data=%3$s</string>

    <!-- Notificacao -->
    <string name="notificacao_title">@string/bottom_navegator_notificacoes</string>
</resources>