<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tarafa_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        app:tabContentStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarefas_tab_aberta"
            android:icon="@drawable/ic_tarefa_aberta"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tarefa_desenvolvimento"
            android:text="@string/tarefas_tab_desenvolvimento"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tarefa_verificacao"
            android:text="@string/tarefas_tab_validacao"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tarefa_concluida"
            android:text="@string/tarefas_tab_concluida"
            />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tarefa_main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="@dimen/margem_padrao_meio"
        android:layout_marginBottom="@dimen/margem_padrao_meio"
        style="@style/floatButtonMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/tarefa_novo_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:text="@string/tarefas_novo_titulo"
        android:layout_marginEnd="@dimen/margem_padrao_meio"
        style="@style/floatButtonSubMenu"
        app:icon="@drawable/ic_tarefa_novo"
        app:layout_constraintBottom_toTopOf="@id/tarefa_main_fab"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        />
</androidx.constraintlayout.widget.ConstraintLayout>