<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/margem_padrao"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/projeto_cadastro_nome_til"
        style="@style/textInputLayoutDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_padrao"
        android:hint="@string/projeto_cadastro_nome_label"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/projeto_cadastro_nome_tie"
            style="@style/textInputEditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:maxLength="30"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/projeto_cadastro_descricao_til"
        style="@style/textInputLayoutDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_padrao"
        android:hint="@string/projeto_cadastro_descricao_label"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projeto_cadastro_nome_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/projeto_cadastro_descricao_tie"
            style="@style/textInputEditTextDefault"
            android:singleLine="false"
            android:maxLines="5"
            android:lineBreakStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLength="255"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/projeto_cadastro_codigo_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewLayoutLabelDefault"
        android:text="@string/projeto_cadastro_codigo_label"
        android:layout_marginTop="@dimen/margem_padrao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projeto_cadastro_descricao_til"
        />

    <TextView
        android:id="@+id/projeto_cadastro_codigo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewLayoutDefault"
        tools:text="@string/projeto_cadastro_criado_por_label"
        app:layout_constraintStart_toEndOf="@id/projeto_cadastro_codigo_label_tv"
        app:layout_constraintTop_toTopOf="@id/projeto_cadastro_codigo_label_tv"
        />

    <TextView
        android:id="@+id/projeto_cadastro_criado_em_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewLayoutLabelDefault"
        android:text="@string/projeto_cadastro_criado_em_label"
        android:layout_marginTop="@dimen/margem_padrao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projeto_cadastro_codigo_label_tv"
        />

    <TextView
        android:id="@+id/projeto_cadastro_criado_em_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewLayoutDefault"
        tools:text="@string/projeto_cadastro_criado_por_label"
        app:layout_constraintStart_toEndOf="@id/projeto_cadastro_criado_em_label_tv"
        app:layout_constraintTop_toTopOf="@id/projeto_cadastro_criado_em_label_tv"
        />

    <TextView
        android:id="@+id/projeto_cadastro_criado_por_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewLayoutLabelDefault"
        android:text="@string/projeto_cadastro_criado_por_label"
        android:layout_marginTop="@dimen/margem_padrao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projeto_cadastro_criado_em_label_tv"
        />

    <TextView
        android:id="@+id/projeto_cadastro_criado_por_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewLayoutDefault"
        tools:text="@string/projeto_cadastro_criado_por_label"
        app:layout_constraintStart_toEndOf="@id/projeto_cadastro_criado_por_label_tv"
        app:layout_constraintTop_toTopOf="@id/projeto_cadastro_criado_por_label_tv"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/projeto_cadastro_salvar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margem_padrao"
        android:paddingStart="@dimen/margem_dobro"
        android:paddingEnd="@dimen/margem_dobro"
        android:backgroundTint="@color/primary_color"
        android:text="@string/generico_salvar_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/projeto_cadastro_cancelar_bt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/projeto_cadastro_cancelar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margem_padrao"
        android:paddingStart="@dimen/margem_dobro"
        android:paddingEnd="@dimen/margem_dobro"
        android:backgroundTint="@color/primary_color"
        android:text="@string/generico_cancelar_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>